# is_chinese_rs

./: .gitignore  Cargo.toml  readme.md
benches/: my_benchmark.rs
node/: Cargo.toml  index.js  is_chinese_napi.linux-x64-gnu.node  package.json  readme.md  test.js
node/.cargo/: config.toml
node/benchmark/: index.js
node/npm/darwin-arm64/: README.md  package.json
node/npm/darwin-x64/: README.md  package.json
node/npm/linux-arm64-gnu/: README.md  package.json
node/npm/linux-arm64-musl/: README.md  package.json
node/npm/linux-x64-gnu/: README.md  package.json
node/npm/linux-x64-musl/: README.md  package.json
node/npm/win32-arm64-msvc/: README.md  package.json
node/npm/win32-x64-msvc/: README.md  package.json
node/src/: lib.rs
src/: lib.rs
tests/: integration_test.rs
