[package]
name = "is_chinese"
version = "1.0.2"
edition = "2018"
authors = ["alsotang <alsotang@gmail.com>"]
description = "detect whether a string is all Chinese"
repository = "https://github.com/alsotang/is_chinese_rs"
license = "MIT"

[dependencies]
packed_simd = { version = "0.3.4", package = "packed_simd_2" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
