[package]
name = "is_chinese"
version = "1.0.3"
edition = "2018"
authors = ["alsotang <alsotang@gmail.com>"]
description = "detect whether a string is all Chinese"
repository = "https://github.com/alsotang/is_chinese_rs"
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
